--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,7 @@
 /**
  * =================================================================== 
  *
- *  Kards v1.0 Main Stylesheet
- *  url: styleshout.com
- *  03-01-2016
+ *  
  *  ------------------------------------------------------------------
  *  TOC:
  *  01. webfonts and iconfonts
@@ -90,7 +88,7 @@ a, a:visited {
 	transition: all 0.3s ease-in-out;
 }
 a:hover, a:focus, a:active {
-	color: #FF0077;
+	color: #e025be;
 	outline: 0;
 }
 
@@ -301,7 +299,7 @@ ul.disc li::before {
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-	background: #FF0077;
+	background: #e025be;
 	position: absolute;
 	left: -17px;
 	top: 11px;
@@ -309,7 +307,7 @@ ul.disc li::before {
 }
 dt {
 	margin: 0;
-	color: #FF0077;
+	color: #e025be;
 }
 dd {
 	margin: 0 0 0 2rem;
@@ -429,7 +427,7 @@ img.pull-left {
 	display: none;
 }
 .pace .pace-progress {
-	background: #FF0077;
+	background: #e025be;
 	position: fixed;
 	z-index: 900;
 	top: 0;
@@ -472,7 +470,7 @@ img.pull-left {
 	border-top: 11px solid rgba(255, 255, 255, 0.1);
 	border-right: 11px solid rgba(255, 255, 255, 0.1);
 	border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-	border-left: 11px solid #FF0077;
+	border-left: 11px solid #e025be;
 	-webkit-animation: load 1.1s infinite linear;
 	animation: load 1.1s infinite linear;
 	display: block;
@@ -594,8 +592,8 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-	color: #cc005f;
-	border-bottom: 1px solid #FF0077;
+	color: #e41dbf;
+	border-bottom: 1px solid #e025be;
 }
 label, legend {
 	font-family: "poppins-bold", sans-serif;
@@ -736,8 +734,8 @@ button.stroke.large, .button.stroke.large {
 	line-height: 5.4rem !important;
 }
 button.stroke:hover, .button.stroke:hover {
-	border: 3px solid #FF0077;
-	color: #FF0077;
+	border: 3px solid #e025be;
+	color: #e025be;
 }
 button::-moz-focus-inner, input::-moz-focus-inner {
 	border: 0;
@@ -925,7 +923,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: #252525;
 }
 .stats-tabs li a:hover {
-	color: #FF0077;
+	color: #e025be;
 }
 .stats-tabs li a em {
 	display: block;
@@ -1041,7 +1039,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	margin-bottom: 1.2rem;
 }
 .section-intro h5 {
-	color: #FF0077;
+	color: #e025be;
 	font-size: 1.6rem;
 	line-height: 1.875;
 	margin-bottom: 0.3rem;
@@ -1138,7 +1136,7 @@ header .logo a {
 }
 .menu-toggle span {
 	display: block;
-	background-color: #FF0077;
+	background-color: #e025be;
 	width: 24px;
 	height: 3px;
 	margin-top: -1.5px;
@@ -1196,7 +1194,7 @@ header .logo a {
 	background-color: rgba(255, 0, 119, 0);
 }
 .menu-toggle.is-clicked span::before, .menu-toggle.is-clicked span::after {
-	background-color: #ff0077;
+	background-color: #e025be;
 	-moz-transition-delay: 0s, 0.2s;
 	-o-transition-delay: 0s, 0.2s;
 	-webkit-transition-delay: 0s, 0.2s;
@@ -1252,12 +1250,12 @@ header .logo a {
 	border: none;
 }
 .main-navigation li a:hover {
-	color: #FF0077;
+	color: #e025be;
 	padding-left: 1rem;
 }
 .main-navigation li.current > a {
 	background: none;
-	color: #FF0077;
+	color: #e025be;
 }
 
 /**
@@ -1315,7 +1313,19 @@ header .logo a {
 	background: #111111;
 	opacity: .85;
 }
-
+.intro-overlay .pic{width: 150px;
+	align-items: normal;
+	height: 150px;
+	box-sizing: border-box;
+	border: 5px white solid;
+	border-radius: 50%;
+	overflow: hidden;
+	box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+	transform: translatey(0px);
+	animation: float 6s ease-in-out infinite;
+	img { width: 100%; height: auto; }
+	position: relative;
+}
 .intro-content {
 	display: table-cell;
 	vertical-align: middle;
@@ -1337,7 +1347,7 @@ header .logo a {
 	text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .intro-content h5 {
-	color: #cc005f;
+	color: #e41dbf;
 	font-family: "poppins-bold", sans-serif;
 	font-size: 2.3rem;
 	line-height: 1.565;
@@ -1384,7 +1394,7 @@ header .logo a {
 	letter-spacing: .25rem;
 }
 .intro-content .button:hover, .intro-content .button:focus {
-	border-color: #cc005f;
+	border-color: #e41dbf;
 }
 .intro-content .button::after {
 	display: inline-block;
@@ -1396,6 +1406,45 @@ header .logo a {
 	position: relative;
 	left: 1.2rem;
 }
+.container {
+	position: relative;
+	width: 300px; /* Adjust to your image size */
+	height: 300px; /* Adjust to your image size */
+	overflow: hidden;
+	margin-top: 20px;
+}
+
+.container img {
+	align-content: center;
+	position: absolute;
+	width: 90%;
+	height: 100%;
+	opacity: 0;
+	animation: fade 10s infinite;
+}
+
+.container img:nth-child(1) {
+	animation-delay: 0s;
+}
+.container img:nth-child(2) {
+	animation-delay: 2s;
+}
+.container img:nth-child(3) {
+	animation-delay: 4s;
+}
+.container img:nth-child(4) {
+	animation-delay: 6s;
+}
+.container img:nth-child(5) {
+	animation-delay: 8s;
+}
+
+@keyframes fade {
+	0%, 20%, 100% { opacity: 0; }
+	10%, 15% { opacity: 1; }
+}
+
+
 
 .intro-social {
 	display: block;
@@ -1416,7 +1465,7 @@ header .logo a {
 	color: #FFFFFF;
 }
 .intro-social li a:hover, .intro-social li a:focus {
-	color: #cc005f;
+	color: #e41dbf;
 }
 
 /**
@@ -1512,8 +1561,35 @@ header .logo a {
 }
 .intro-info .lead {
 	text-align: left;
-	padding-left: 13rem;
+	padding-left: 18rem;
 }
+.intro-info .pic {
+	width: 150px;
+	height: 150px;
+	box-sizing: border-box;
+	border: 5px white solid;
+	border-radius: 50%;
+	overflow: hidden;
+	box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+	transform: translatey(0px);
+	animation: float 6s ease-in-out infinite;
+	img { width: 100%; height: auto; }
+}
+@keyframes float {
+	0% {
+		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+		transform: translatey(0px);
+	}
+	50% {
+		box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+		transform: translatey(-20px);
+	}
+	100% {
+		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+		transform: translatey(0px);
+	}
+}
+
 
 .about-content {
 	position: relative;
@@ -1550,8 +1626,44 @@ header .logo a {
 	font-size: 1.5rem;
 	line-height: 1;
 }
+.about-content .skills-list li {
+	font-family: "poppins-bold", sans-serif;
+	color: #888888;
+	letter-spacing: .2rem;
+	font-size: 1.5rem;
+	line-height: 3rem;
+}
 .about-content .skill-bars {
 	margin-top: 6rem;
+}
+/* Animation property */
+.button {
+  animation: wiggle 2s linear infinite;
+}
+
+/* Keyframes */
+@keyframes wiggle {
+  0%, 7% {
+    transform: rotateZ(0);
+  }
+  15% {
+    transform: rotateZ(-15deg);
+  }
+  20% {
+    transform: rotateZ(10deg);
+  }
+  25% {
+    transform: rotateZ(-10deg);
+  }
+  30% {
+    transform: rotateZ(6deg);
+  }
+  35% {
+    transform: rotateZ(-4deg);
+  }
+  40%, 100% {
+    transform: rotateZ(0);
+  }
 }
 
 .button-section {
@@ -1629,7 +1741,7 @@ header .logo a {
 	text-align: center;
 }
 #resume .resume-header h2 {
-	color: #FF0077;
+	color: #e025be;
 }
 
 #resume .resume-timeline {
@@ -1956,7 +2068,7 @@ header .logo a {
 	border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-	background: #cc005f;
+	background: #e41dbf;
 	border: none;
 }
 @media only screen and (max-width:600px) {
@@ -2122,7 +2234,7 @@ header .logo a {
 	color: white;
 }
 #services .section-intro h5 {
-	color: #FF0077;
+	color: #e025be;
 }
 #services .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2144,7 +2256,7 @@ header .logo a {
 }
 .services-list .icon i {
 	font-size: 5.4rem;
-	color: #FF0077;
+	color: #e025be;
 }
 .services-list h3 {
 	color: #FFFFFF;
@@ -2172,7 +2284,7 @@ header .logo a {
 	background: #FFFFFF;
 }
 .owl-theme .owl-controls .owl-page.active span {
-	background: #FF0077;
+	background: #e025be;
 }
 
 
@@ -2183,7 +2295,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #stats {
-	background: #990047;
+	background: #930f7a;
 	padding-top: 7.2rem;
 	padding-bottom: 6rem;
 	text-align: center;
@@ -2258,7 +2370,7 @@ header .logo a {
 	color: white;
 }
 #contact .section-intro h5 {
-	color: #FF0077;
+	color: #e025be;
 }
 #contact .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2311,7 +2423,7 @@ header .logo a {
 	padding: 0 2rem;
 	margin: 0;
 	color: #FFFFFF;
-	background: #FF0077;
+	background: #e025be;
 }
 #contact form .form-field label::after {
 	position: absolute;
@@ -2320,7 +2432,7 @@ header .logo a {
 	margin-top: -6px;
 	border-top: 5px solid transparent;
 	border-bottom: 5px solid transparent;
-	border-right: 5px solid #FF0077;
+	border-right: 5px solid #e025be;
 	content: "";
 }
 #contact input[type="text"],
@@ -2342,7 +2454,7 @@ header .logo a {
 #contact input[type="text"]:focus,
 #contact input[type="password"]:focus,
 #contact input[type="email"]:focus {
-	border-color: #FF0077;
+	border-color: #e025be;
 	color: #FFFFFF;
 }
 #contact textarea {
@@ -2350,7 +2462,7 @@ header .logo a {
 	padding: 1.8rem 2rem;
 }
 #contact textarea:focus {
-	border-color: #FF0077;
+	border-color: #e025be;
 	color: #FFFFFF;
 }
 #contact button.submitform {
@@ -2362,11 +2474,11 @@ header .logo a {
 	padding: 0 3rem;
 	margin-top: 4.8rem;
 	width: 100%;
-	background: #FF0077;
+	background: #e025be;
 	color: #FFFFFF;
 }
 #contact button.submitform:hover, #contact button.submitform:focus {
-	background: #cc005f;
+	background: #e41dbf;
 }
 #message-warning, #message-success {
 	display: none;
@@ -2380,7 +2492,7 @@ header .logo a {
 	color: #fa0003;
 }
 #message-success {
-	color: #FF0077;
+	color: #e025be;
 }
 #message-warning i, #message-success i {
 	margin-right: 10px;
@@ -2425,7 +2537,7 @@ header .logo a {
 	color: #FFFFFF;
 }
 .contact-info h5 {
-	color: #FF0077;
+	color: #e025be;
 }
 
 /**
@@ -2499,7 +2611,7 @@ footer a, footer a:visited {
 	color: #FFFFFF;
 }
 footer a:hover, footer a:focus {
-	color: #FF0077;
+	color: #e025be;
 }
 footer .row {
 	max-width: 900px;
@@ -2578,7 +2690,7 @@ footer .copyright span:last-child::after {
 	width: 6rem;
 	line-height: 6.6rem;
 	text-align: center;
-	background: #cc005f;
+	background: #e41dbf;
 	color: #FFFFFF;
 	text-align: center;
 	text-transform: uppercase;
@@ -2597,3 +2709,12 @@ footer .copyright span:last-child::after {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+.col-four .follow-logo a:hover {
+	background-color: #e41dbf;
+	border: none;
+}
+.col-six .footer-social a:hover{
+	color: #e025be
+}
+
